--- a/notebooks/3_regression.ipynb
+++ b/notebooks/3_regression.ipynb
@@ -15,6 +15,7 @@
         "VUZAwJjMvh0r",
         "KDcimzDmxxIo"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/r4phael/ml-course/blob/master/notebooks/3_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/intelligentagents/aprendizagem-supervisionada/blob/master/notebooks/3_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
