--- a/notebooks/2_classification.ipynb
+++ b/notebooks/2_classification.ipynb
@@ -29,7 +29,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/r4phael/ml-course/blob/master/notebooks/2_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/intelligentagents/aprendizagem-supervisionada/blob/master/notebooks/2_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +39,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#**Semana 2 - Modelos de Classificação**"
+        "#** Modelos de Classificação**"
       ]
     },
     {
